--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@syncfusion/ej2-react-richtexteditor": "^19.4.50",
     "@syncfusion/ej2-react-schedule": "^19.4.50",
     "chart.js": "^3.9.1",
+    "firebase": "^9.12.1",
     "ng2-charts": "^4.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^5.0.3",
     "react-icons": "^4.3.1",
-    "react-router-dom": "^6.2.1",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.0"
   },
   "scripts": {
