--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-firebase-hooks": "^5.0.3",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.4.2",
-    "react-scripts": "5.0.0"
+    "react-scripts": "5.0.0",
+    "react_router": "5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
